Added lights and horn support, returning invalid characters when requesting scripts.js is known bug

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,20 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
 framework = arduino
+; upload_speed = 921600
 upload_speed = 250000
 extra_scripts = copy_pages_content_to_header.py
-lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	adafruit/Adafruit NeoPixel@^1.11.0
